# waterlevel_server

./: .env  Cargo.toml  README.md
migrations/: 20230402150556_init.down.sql  20230402150556_init.up.sql
src/: app_state.rs  lib.rs  main.rs
src/controllers/: login.rs  mod.rs  registration.rs  stats.rs  user_controller.rs
src/controllers/auth/: registration.rs
src/controllers/stats/: create_stats.rs  get_one_stat.rs  get_stats.rs  mod.rs
src/errors/: custom_errors.rs
src/middlewares/: middleware.rs  mod.rs
src/models/: mod.rs  statsmodel.rs  users.rs
src/routes/: app_routes.rs  mod.rs  routes.rs
src/utilis/: jwt.rs  mod.rs  password.rs
