[package]
name = "waterlevel_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["headers"] }
bcrypt = "0.14.0"
dotenvy = "0.15.7"
serde = { version = "1.0.159", features = ["derive"] }
sqlx-postgres = "0.0.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
validators = "0.24.3"
