[package]
name = "waterlevel_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["headers", "macros"] }
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "time", "json"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
validators = "0.24.3"
